# LightNamer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: .pull_request_template.md  contributing.md
.github/workflows/: ci.yml  format.yml  respond.yml  tests.yml
.idx/: dev.nix
lightnamer/: __init__.py  cli.py  core.py
rencli/: __init__.py  cli.py  core.py
tests/: test_ren.py
